--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,62 @@
 version: "3.8"
 
 services:
-  # --- 1. DATABASE SERVICE ---
   db_service:
     image: mysql:8.0
-    container_name: db_${GROUP_NAME}
+    container_name: db_A8
     restart: always
     environment:
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: myorder
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: apppass
       MYSQL_ROOT_PASSWORD: rootpassword
-    # volumes
-    # Network
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    networks:
+      - app_network
 
-  # --- 2. APP SERVICE ---
   app_service:
     build: ./app
-    container_name: app_${GROUP_NAME}
+    container_name: app_A8
     restart: always
     expose:
-      - "3000"
+      - "5000"
     environment:
-      - DB_HOST=db_service
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - DB_NAME=${DB_NAME}
-      - APP_PORT=3000
+      DB_HOST: db_service
+      DB_USER: appuser
+      DB_PASS: apppass
+      DB_NAME: myorder
+      APP_PORT: 5000
     depends_on:
-      - db_service
-    # Network
+      db_service:
+        condition: service_healthy
+    networks:
+      - app_network
 
-  # --- 3. NGINX SERVICE ---
   nginx_service:
     image: nginx:alpine
-    container_name: nginx_${GROUP_NAME}
+    container_name: nginx_A8
     restart: always
     ports:
-      - "${APP_PORT}:80"
+      - "2581:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app_service
-    # Network
-    # volumes
+    networks:
+      - app_network
 
-#--- VOLUMES AND NETWORKS ---
-# tambahkan bagian volumes dan networks di sini
+volumes:
+  db_data:
+
+networks:
+  app_network:
+
+
+
